--- a/Home-Dashboard/index.html
+++ b/Home-Dashboard/index.html
@@ -653,18 +653,18 @@ $(document).ready(function () {
                         <img src="https://bullrun.live//Content/assets/images/svg/new_message.svg" alt="image" class="image">
                     </div>
                     <div class="page-content col-xl-7 col-lg-6 col-md-12">
-                        <h3 class="mb-1">User ID : <span class="currentuserid"></span></h3>
+                        <h3 class="mb-1 text-white">User ID : <span class="currentuserid"></span></h3>
 
                         <input class="currentuseridlink" type="text" id="myInput" style="opacity:0; height:0px;" />
                         <input class="currentuseridlinknew" type="text" id="myInput1" style="opacity:0; height:0px;"/>
 
 
-                        <p class="mb-0 fs-16">Referral link : <span class="currentuseridlink"></span> &emsp; <span class="btn btn-warning" onclick="myFunction()"> <i class="fa fa-copy"></i></span></p>
+                        <p class="mb-0 fs-16 text-white">Referral link : <span class="currentuseridlink"></span> &emsp; <span class="btn btn-warning" onclick="myFunction()"> <i class="fa fa-copy"></i></span></p>
 
-                        <p class="mb-0 fs-16">Trust Wallet Referral link : <span class="currentuseridlinknew"></span> &emsp; <span class="btn btn-warning" onclick="myFunction1()"> <i class="fa fa-copy"></i></span></p>
+                        <p class="mb-0 fs-16 text-white">Trust Wallet Referral link : <span class="currentuseridlinknew"></span> &emsp; <span class="btn btn-warning" onclick="myFunction1()"> <i class="fa fa-copy"></i></span></p>
 
 
-                        <p class="mb-0 fs-16"><a class="ethaddress" href="" target="_blank">Your ETH address: <span class="currentaddress"></span> <i class="fa fa fa-external-link"></i></a></p>
+                        <p class="mb-0 fs-16 text-white"><a class="ethaddress text-white" href="" target="_blank">Your ETH address: <span class="currentaddress"></span> <i class="fa fa fa-external-link"></i></a></p>
                     </div>
                     
                     </div>
@@ -682,11 +682,11 @@ $(document).ready(function () {
                                     <div class="row">
                                         <div class="d-flex">
                                             <div class="">
-                                                <img src="https://bullrun.live/Content/assets/img/user.png" class="w-7 h-7" alt="">
+                                                <img src="https://res.cloudinary.com/forceex/image/upload/v1591974797/unnamed_1_zpgeyu.jpg" class="w-7 h-7" alt="">
                                             </div>
                                             <div class="ml-3">
                                                 <p class="text-white mb-1 fs-12">Total Users</p>
-                                                <div class="h5 m-0 fs-14 text-warning"><span class="TotalUsers"></span></div>
+                                                <div class="h5 m-0 fs-14 text-white"><span class="TotalUsers"></span></div>
                                             </div>
                                         </div>
                                     </div>
@@ -697,7 +697,7 @@ $(document).ready(function () {
                                     <div class="row">
                                         <div class="d-flex">
                                             <div class="">
-                                                <img src="https://bullrun.live/Content/assets/img/1.png" class="w-7 h-7" alt="">
+                                                <img src="https://res.cloudinary.com/forceex/image/upload/v1591973825/logo_one_icon_bmlawv.jpg" class="w-7 h-7" alt="">
                                             </div>
                                             <div class="ml-3">
                                                 <p class="text-white mb-1 fs-12">Pool 1 Users</p>
@@ -720,16 +720,16 @@ $(document).ready(function () {
         <!-- row opened -->
         <div class="row">
             <div class="col-md-12 col-lg-6 col-xl-3">
-                <div class="card overflow-hidden bg-primary">
-                    <div class="card-body bg-gradient-success">
+                <div class="card overflow-hidden bg-lime rounded-pill">
+                    <div class="card-body bg-gradient-lime">
                         <div class="d-flex">
                             <div class="">
-                                <p class="mb-2 h6">Referral Earning ETH</p>
+                                <p class="mb-2 h6">Referral Bonus</p>
                                 <h2 class="mb-1 "><span class="totalreferral">0</span></h2>
                             </div>
                             <div class=" my-auto ml-auto">
                                 <div class="chart-wrapper text-center">
-                                    <img src="https://bullrun.live/Content/assets/img/d1.png" class="h-7" alt="">
+                                    <img src="https://res.cloudinary.com/forceex/image/upload/v1591975676/124-1245823_ethereum-bitcoin-black-eth-block-chain-ethereum-logo_piol6u.png" class="h-7" alt="">
                                 </div>
                             </div>
                         </div>
@@ -739,12 +739,12 @@ $(document).ready(function () {
 
             </div>
             <div class="col-md-12 col-lg-6 col-xl-3">
-                <div class="card overflow-hidden bg-gradient-secondary">
+                <div class="card overflow-hidden bg-gradient-lime rounded-pill">
                     <div class="card-body text-white">
 
                         <div class="d-flex">
                             <div class="">
-                                <p class="mb-2 h6">AutoPool Earning ETH</p>
+                                <p class="mb-2 h6">ETH Earned in Autopool</p>
                                 <h2 class="mb-1 "><span class="totalpoolpayment">0</span></h2>
                             </div>
                             <div class=" my-auto ml-auto">
@@ -763,7 +763,7 @@ $(document).ready(function () {
 
 
             <div class="col-md-12 col-lg-6 col-xl-3">
-                <div class="card overflow-hidden bg-teal">
+                <div class="card overflow-hidden bg-lime rounded-pill">
                     <div class="card-body text-white">
                         <div class="d-flex">
                             <div class="">
@@ -772,7 +772,7 @@ $(document).ready(function () {
                             </div>
                             <div class=" my-auto ml-auto">
                                 <div class="chart-wrapper text-center">
-                                    <img src="https://bullrun.live/Content/assets/img/d4.png" class="h-7" alt="">
+                                    <img src="https://res.cloudinary.com/forceex/image/upload/v1591975987/referral-icon-16_visqsi.jpg" class="h-7" alt="">
                                 </div>
                             </div>
                         </div>
@@ -781,7 +781,7 @@ $(document).ready(function () {
                 </div>
             </div>
             <div class="col-md-12 col-lg-6 col-xl-3">
-                <div class="card overflow-hidden" style="background-color:#004172;color:#fff;">
+                <div class="card overflow-hidden rounded-pill bg-lime">
 
                     <div class="card-body text-white">
                         <div class="d-flex">
@@ -792,7 +792,7 @@ $(document).ready(function () {
 
                             <div class=" my-auto ml-auto">
                                 <div class="chart-wrapper text-center">
-                                    <img src="https://bullrun.live/Content/assets/img/d5.png" class="h-7" alt="">
+                                    <img src="https://res.cloudinary.com/forceex/image/upload/v1591976139/download_xc7v6k.png" class="h-7" alt="">
                                 </div>
                             </div>
 
@@ -826,7 +826,7 @@ $(document).ready(function () {
         <!-- row opened -->
         <div class="row ">
             <div class="col-md-3 col-xs-6">
-                <div class="card text-center overflow-hidden">
+                <div class="card text-center overflow-hidden bg-aqua">
                     <div class="pool1status">
                         <div class="card-status"></div>
                         <div class="ribbon ribbon-top-left"></div>
@@ -865,11 +865,11 @@ $(document).ready(function () {
 
 
         <!-- Footer opened -->
-        <footer class="footer-main leftmenu-footer">
+        <footer class="footer-main leftmenu-footer bg-dark">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6  mt-2 mb-2 p-l-10">
-                        <span class="p-r-10">Contract address</span>
+                        <span class="p-r-10 text-white">Contract address: </span>
                         <a href="https://etherscan.io/address/0x885c3177dde25cd01507bf7ca0b00b4b26606143" class="text-success" target="_blank">
                             0x885c3177dde25cd01507bf7ca0b00b4b26606143 <i class="fa fa-external-link"></i>
                         </a>
