--- a/Home-Dashboard/index.html
+++ b/Home-Dashboard/index.html
@@ -661,7 +661,7 @@ $(document).ready(function () {
 
                         <p class="mb-0 fs-16 text-white">Referral link : <span class="currentuseridlink"></span> &emsp; <span class="btn btn-warning" onclick="myFunction()"> <i class="fa fa-copy"></i></span></p>
 
-                        <p class="mb-0 fs-16 text-white">Trust Wallet Referral link : <span class="currentuseridlinknew"></span> &emsp; <span class="btn btn-warning" onclick="myFunction1()"> <i class="fa fa-copy"></i></span></p>
+                        <p class="mb-0 fs-16 text-white">Wallet Referral link : <span class="currentuseridlinknew"></span> &emsp; <span class="btn btn-warning" onclick="myFunction1()"> <i class="fa fa-copy"></i></span></p>
 
 
                         <p class="mb-0 fs-16 text-white"><a class="ethaddress text-white" href="" target="_blank">Your ETH address: <span class="currentaddress"></span> <i class="fa fa fa-external-link"></i></a></p>
@@ -674,7 +674,7 @@ $(document).ready(function () {
         <!-- row opened -->
         <div class="row">
             <div class="col-xl-12 col-md-12 col-lg-12">
-                <div class="card bg-dark1">
+                <div class="card bg-olive">
                     <div class="js-conveyor-example">
                         <ul class="news-crypto">
                             <li>
@@ -720,8 +720,8 @@ $(document).ready(function () {
         <!-- row opened -->
         <div class="row">
             <div class="col-md-12 col-lg-6 col-xl-3">
-                <div class="card overflow-hidden bg-lime rounded-pill">
-                    <div class="card-body bg-gradient-lime">
+                <div class="card overflow-hidden bg-olive rounded-pill">
+                    <div class="card-body bg-gradient-olive">
                         <div class="d-flex">
                             <div class="">
                                 <p class="mb-2 h6">Referral Bonus</p>
@@ -739,7 +739,7 @@ $(document).ready(function () {
 
             </div>
             <div class="col-md-12 col-lg-6 col-xl-3">
-                <div class="card overflow-hidden bg-gradient-lime rounded-pill">
+                <div class="card overflow-hidden bg-olive rounded-pill">
                     <div class="card-body text-white">
 
                         <div class="d-flex">
@@ -763,7 +763,7 @@ $(document).ready(function () {
 
 
             <div class="col-md-12 col-lg-6 col-xl-3">
-                <div class="card overflow-hidden bg-lime rounded-pill">
+                <div class="card overflow-hidden bg-olive rounded-pill">
                     <div class="card-body text-white">
                         <div class="d-flex">
                             <div class="">
@@ -781,7 +781,7 @@ $(document).ready(function () {
                 </div>
             </div>
             <div class="col-md-12 col-lg-6 col-xl-3">
-                <div class="card overflow-hidden rounded-pill bg-lime">
+                <div class="card overflow-hidden rounded-pill bg-olive">
 
                     <div class="card-body text-white">
                         <div class="d-flex">
@@ -826,20 +826,20 @@ $(document).ready(function () {
         <!-- row opened -->
         <div class="row ">
             <div class="col-md-3 col-xs-6">
-                <div class="card text-center overflow-hidden bg-aqua">
+                <div class="card text-center overflow-hidden bg-warning">
                     <div class="pool1status">
-                        <div class="card-status"></div>
+                        <div class="card-status bg-warning"></div>
                         <div class="ribbon ribbon-top-left"></div>
                     </div>
-                    <div class="card-header text-center mx-auto">
-                        <h2 class="card-title font-weight-bold">AutoPool 1</h2>
+                    <div class="card-header text-center mx-auto bg-warning text-white">
+                        <h2 class="card-title font-weight-bold text-white">AutoPool 1</h2>
                     </div>
-                    <div class="card-body">
-                        <h1 class="pricing-card-title mb-5">0.1 ETH</h1>
-                        <p class="mb-5">Globally <strong>3</strong> people pays <br /> <strong>0.1</strong> ETH each</p>
-                        <p class="mb-5">No Referral necessary</p>
-                        <button type="button" class="btn btn-primary pool1pay">Enter</button>
-                        <p class="pool1transaction btn btn-primary disabled">Not Eligible</p>
+                    <div class="card-body bg-warning text-white">
+                        <h1 class="pricing-card-title mb-5 text-white">0.1 ETH</h1>
+                        <p class="mb-5 text-white">Globally <strong>3</strong> people pays <br /> <strong>0.1</strong> ETH each</p>
+                        <p class="mb-5 text-white">No Referral necessary</p>
+                        <button type="button" class="btn btn-dark pool1pay text-white">Enter</button>
+                        <p class="pool1transaction btn btn-dark disabled text-white">Not Eligible</p>
                     </div>
                 </div>
             </div>
