--- a/Home-Dashboard/index.html
+++ b/Home-Dashboard/index.html
@@ -674,7 +674,7 @@ $(document).ready(function () {
         <!-- row opened -->
         <div class="row">
             <div class="col-xl-12 col-md-12 col-lg-12">
-                <div class="card bg-olive">
+                <div class="card bg-success">
                     <div class="js-conveyor-example">
                         <ul class="news-crypto">
                             <li>
@@ -720,8 +720,8 @@ $(document).ready(function () {
         <!-- row opened -->
         <div class="row">
             <div class="col-md-12 col-lg-6 col-xl-3">
-                <div class="card overflow-hidden bg-olive rounded-pill">
-                    <div class="card-body bg-gradient-olive">
+                <div class="card overflow-hidden bg-success rounded-pill">
+                    <div class="card-body bg-gradient-success">
                         <div class="d-flex">
                             <div class="">
                                 <p class="mb-2 h6">Referral Bonus</p>
@@ -739,7 +739,7 @@ $(document).ready(function () {
 
             </div>
             <div class="col-md-12 col-lg-6 col-xl-3">
-                <div class="card overflow-hidden bg-olive rounded-pill">
+                <div class="card overflow-hidden bg-success rounded-pill">
                     <div class="card-body text-white">
 
                         <div class="d-flex">
@@ -763,7 +763,7 @@ $(document).ready(function () {
 
 
             <div class="col-md-12 col-lg-6 col-xl-3">
-                <div class="card overflow-hidden bg-olive rounded-pill">
+                <div class="card overflow-hidden bg-success rounded-pill">
                     <div class="card-body text-white">
                         <div class="d-flex">
                             <div class="">
@@ -781,7 +781,7 @@ $(document).ready(function () {
                 </div>
             </div>
             <div class="col-md-12 col-lg-6 col-xl-3">
-                <div class="card overflow-hidden rounded-pill bg-olive">
+                <div class="card overflow-hidden rounded-pill bg-success">
 
                     <div class="card-body text-white">
                         <div class="d-flex">
