--- a/Transaction/index.html
+++ b/Transaction/index.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
+    <!--
     <script>
         var account = localStorage.getItem("address");
 
@@ -79,6 +80,7 @@
 <body class="app">
 
     <!-- Loader -->
+    <!--
     <div id="loading">
         <img src="https://bullrun.live/Content/assets/images/other/loader.svg" class="loader-img" alt="Loader">
     </div>
@@ -456,7 +458,7 @@ window.addEventListener('load', function () {
         <!-- row opened -->
         <div class="row">
             <div class="col-md-12">
-                <div class="card overflow-hidden">
+                <div class="card overflow-hidden bg-success">
                     <div class="card-header">
                         <h3 class="card-title">Transaction</h3>
                     </div>
@@ -539,11 +541,11 @@ window.addEventListener('load', function () {
 </script>
 
         <!-- Footer opened -->
-        <footer class="footer-main leftmenu-footer">
+        <footer class="footer-main leftmenu-footer bg-dark">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6  mt-2 mb-2 p-l-10">
-                        <span class="p-r-10">Contract address</span>
+                        <span class="p-r-10 text-white">Contract address: </span>
                         <a href="https://etherscan.io/address/0x885c3177dde25cd01507bf7ca0b00b4b26606143" class="text-success" target="_blank">
                             0x885c3177dde25cd01507bf7ca0b00b4b26606143 <i class="fa fa-external-link"></i>
                         </a>
