--- a/Transaction/index.html
+++ b/Transaction/index.html
@@ -460,7 +460,7 @@ window.addEventListener('load', function () {
             <div class="col-md-12">
                 <div class="card overflow-hidden bg-success">
                     <div class="card-header">
-                        <h3 class="card-title">Transaction</h3>
+                        <h3 class="card-title text-white">Transaction</h3>
                     </div>
                     <div class="card-body">
                         <div class="">
@@ -469,8 +469,8 @@ window.addEventListener('load', function () {
                                     <div class="tabs-menu1 ">
                                         <!-- Tabs -->
                                         <ul class="nav panel-tabs">
-                                            <li class=""><a href="#tab5" class="active" data-toggle="tab">Referral</a></li>
-                                            <li><a href="#tab6" data-toggle="tab">Pool Payments</a></li>
+                                            <li class=""><a href="#tab5" class="active text-white" data-toggle="tab">Referral</a></li>
+                                            <li><a href="#tab6" data-toggle="tab" class = "text-white" >Pool Payments</a></li>
 
                                         </ul>
                                     </div>
@@ -480,8 +480,8 @@ window.addEventListener('load', function () {
                                         <div class="tab-pane active " id="tab5">
                                             <div class="">
                                                 <div class="table-responsive">
-                                                    <table class="table card-table table-striped text-nowrap table-bordered">
-                                                        <thead class="border-top">
+                                                    <table class="table card-table bg-primary table-striped text-nowrap table-bordered">
+                                                        <thead class="border-top text-white bg-primary">
                                                             <tr>
                                                                 <th>TransactionHash</th>
                                                                 <th>From address </th>
