--- a/Transaction/index.html
+++ b/Transaction/index.html
@@ -475,24 +475,24 @@ window.addEventListener('load', function () {
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="panel-body tabs-menu-body">
+                                <div class="panel-body tabs-menu-body bg-primary">
                                     <div class="tab-content">
                                         <div class="tab-pane active " id="tab5">
                                             <div class="">
-                                                <div class="table-responsive">
+                                                <div class="table-responsive bg-primary">
                                                     <table class="table card-table bg-primary table-striped text-nowrap table-bordered">
                                                         <thead class="border-top text-white bg-primary">
                                                             <tr>
-                                                                <th>TransactionHash</th>
-                                                                <th>From address </th>
+                                                                <th class = "text-white">TransactionHash</th>
+                                                                <th class = "text-white">From address </th>
 
 
-                                                                <th>Level</th>
-                                                                <th>Amount</th>
+                                                                <th class = "text-white">Level</th>
+                                                                <th class = "text-white">Amount</th>
 
                                                             </tr>
                                                         </thead>
-                                                        <tbody class="autopool_table"></tbody>
+                                                        <tbody class="autopool_table bg-success text-white"></tbody>
                                                     </table>
                                                 </div>
                                             </div>
