--- a/Team/index.html
+++ b/Team/index.html
@@ -79,6 +79,7 @@
 <body class="app">
 
     <!-- Loader -->
+    <!--
     <div id="loading">
         <img src="https://bullrun.live/Content/assets/images/other/loader.svg" class="loader-img" alt="Loader">
     </div>
@@ -463,11 +464,11 @@ window.addEventListener('load', function () {
 
 
         <!-- row opened -->
-        <div class="row">
+        <div class="row bg-dark">
             <div class="col-md-12">
-                <div class="card overflow-hidden">
-                    <div class="card-header">
-                        <h3 class="card-title">Team</h3>
+                <div class="card overflow-hidden bg-success">
+                    <div class="card-header bg-success">
+                        <h3 class="card-title text-white">Team</h3>
                     </div>
                     <div class="card-body">
                         <div class="">
@@ -497,11 +498,11 @@ window.addEventListener('load', function () {
 </script>
         
         <!-- Footer opened -->
-        <footer class="footer-main leftmenu-footer">
+        <footer class="footer-main leftmenu-footer bg-dark">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6  mt-2 mb-2 p-l-10">
-                        <span class="p-r-10">Contract address</span>
+                        <span class="p-r-10 text-white">Contract address: </span>
                         <a href="https://etherscan.io/address/0x885c3177dde25cd01507bf7ca0b00b4b26606143" class="text-success" target="_blank">
                             0x885c3177dde25cd01507bf7ca0b00b4b26606143 <i class="fa fa-external-link"></i>
                         </a>
