--- a/Team/index.html
+++ b/Team/index.html
@@ -457,8 +457,8 @@ window.addEventListener('load', function () {
         
         <!-- Sidemenu closed -->
 <!-- App-content opened -->
-<div class="app-content">
-    <div class="section">
+<div class="app-content bg-dark">
+    <div class="section bg-dark">
         
 
 
@@ -475,8 +475,8 @@ window.addEventListener('load', function () {
                             <div class="panel panel-primary">
 
                                 <div class="panel-body tabs-menu-body">
-                                    <div class="panel-group1" id="accordion11">
-                                        <div class="">No data found</div>
+                                    <div class="panel-group1 text-white" id="accordion11">
+                                        <div class="text-white">No data found</div>
                                     </div>
                                 </div>
                             </div>
