--- a/Team/index.html
+++ b/Team/index.html
@@ -472,10 +472,10 @@ window.addEventListener('load', function () {
                     </div>
                     <div class="card-body">
                         <div class="">
-                            <div class="panel panel-primary">
+                            <div class="panel panel-primary bg-primary text-white">
 
-                                <div class="panel-body tabs-menu-body">
-                                    <div class="panel-group1 text-white" id="accordion11">
+                                <div class="panel-body tabs-menu-body bg-primary text-white">
+                                    <div class="panel-group1 text-white bg-primary" id="accordion11">
                                         <div class="text-white">No data found</div>
                                     </div>
                                 </div>
