--- a/poolno1/index.html
+++ b/poolno1/index.html
@@ -205,7 +205,7 @@ function loaddata(poolno) {
 </script>
 
 <!-- App-content opened -->
-<div class="app-content">
+<div class="app-content bg-dark">
     <div class="section">
 
 
@@ -283,7 +283,7 @@ function loaddata(poolno) {
                             0x885c3177dde25cd01507bf7ca0b00b4b26606143 <i class="fa fa-external-link"></i>
                         </a>
                     </div>
-                    <div class="col-md-6  mt-2 mb-2 text-center">
+                    <div class="col-md-6  mt-2 mb-2 text-center text-white">
                         Copyright © 2020 <a href="#" class="fs-14 text-primary">https://havanav1.github.io</a>
                     </div>
                 </div>
