--- a/Transaction/index.html
+++ b/Transaction/index.html
@@ -550,7 +550,7 @@ window.addEventListener('load', function () {
                             0x885c3177dde25cd01507bf7ca0b00b4b26606143 <i class="fa fa-external-link"></i>
                         </a>
                     </div>
-                    <div class="col-md-6  mt-2 mb-2 text-center">
+                    <div class="col-md-6  mt-2 mb-2 text-center text-white">
                         Copyright © 2020 <a href="#" class="fs-14 text-primary"></a>
                     </div>
                 </div>
