--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAVANA</title>
     
-    <link rel="shortcut icon" type="image/x-icon" href="https://havanav1.github.io/signup/assets/img/bullrun3.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://bullrun3.github.io/signup/assets/img/bullrun3.png">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700" rel="stylesheet">
     <!--Font icons-->
